# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-install-gui-2.2.0.0_p20100920 (20 Sep 2010)

  20 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +calculate-install-gui-2.2.0.0_p20100920.ebuild:
  daily update

*calculate-install-gui-2.2.0.0_p20100910-r1 (15 Sep 2010)

  15 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100910.ebuild,
  +calculate-install-gui-2.2.0.0_p20100910-r1.ebuild:
  Update depends of live calculate-install.

*calculate-install-gui-2.2.0.0_p20100907 (07 Sep 2010)

  07 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100903-r1.ebuild,
  +calculate-install-gui-2.2.0.0_p20100907.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100903 (03 Sep 2010)

  03 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.0.0_p20100903.ebuild:
  Daily update.

*calculate-install-gui-2.2.0.0_p20100902 (02 Sep 2010)

  02 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100830-r2.ebuild,
  +calculate-install-gui-2.2.0.0_p20100902.ebuild:
  Daily update

*calculate-install-gui-2.2.0.0_p20100830-r2 (02 Sep 2010)

  02 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100830-r1.ebuild,
  +calculate-install-gui-2.2.0.0_p20100830-r2.ebuild:
  Change depends.

*calculate-install-gui-2.2.0.0_p20100830-r1 (01 Sep 2010)

  01 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100830.ebuild,
  +calculate-install-gui-2.2.0.0_p20100830-r1.ebuild:
  Add work this ebuild with calculate-install from 01 sep.

*calculate-install-gui-2.2.0.0_p20100830 (30 Aug 2010)

  30 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-install-gui-2.2.0.0_p20100826-r2.ebuild,