@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100921 (21 Sep 2010)
+
+  21 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-install-gui-2.2.0.0_p20100921.ebuild:
+  daily update
+
 *calculate-install-gui-2.2.0.0_p20100920 (20 Sep 2010)
 
   20 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
